--- a/stylesheets/resume.css
+++ b/stylesheets/resume.css
@@ -59,7 +59,7 @@ a {
 
 #title {
 	line-height: 42px;
-	border-bottom: 3px solid #0081C4;
+	border-bottom: 3px solid #000;
 	padding-bottom: 30px;
 	margin: 0px 0 30px 0;
 }
@@ -122,7 +122,7 @@ p label {
 }
 
 .section .title {
-	background: #0081C4;
+	background: #000;
 	float: left;
 	text-transform: uppercase;
 	font-size: 105%;
