--- a/stylesheets/resume.css
+++ b/stylesheets/resume.css
@@ -51,7 +51,7 @@ a {
 	background: #fff;
 	width: 900px;
 	padding: 35px;
-	margin: 0 auto 15px auto;
+	margin: 0px auto 15px auto;
 	overflow: hidden;
 	
 	box-shadow: 0 0 6px #ccc;
