--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -8,8 +8,7 @@
 }
 
 .btn:hover{
-	background: #004777;
-	color: #FFC758;
+	color: #141A30;
 }
 
 .btn-group{
@@ -24,10 +23,10 @@
 	margin-bottom: 1em;
 	display:block;
 	background-repeat: no-repeat;
-    background-position: 50%;
-    border-radius: 50%;
-    overflow: hidden;
-    padding:5px 4px;
-    width: 250px;
-    height: 313px;
+  background-position: 50%;
+  border-radius: 50%;
+  overflow: hidden;
+  padding:5px 4px;
+  width: 300px;
+  height: 300px;
 }
