--- a/stylesheets/resume.css
+++ b/stylesheets/resume.css
@@ -1,10 +1,10 @@
 body {
 	margin: 0;
 	padding: 0;
-	background: #0081C4;
+	background: #E26D5A;
 	overflow-y: scroll;
 	overflow-x: hidden;
-	font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+	font-family: Tahoma, Geneva, sans-serif;
 	line-height: 18px;
 	font-size: 12px;
 	color: #222;
@@ -160,16 +160,21 @@ p label {
 
 /* ___ photo ___ */
 #photo {
-	width: 160px;
-	height: 200px;
+	width: 170px;
+	height: 170px;
 	overflow: hidden;
 	float: left;
 	margin-top: 8px;
 	border-radius: 4px;
 }
 #photo img {
-	width: 100%;
+	width: 95%;
 	height: auto;
+	background-position: 50%;
+	border-radius: 50%;
+	overflow: hidden;
+	margin: 1px;
+    border:2px solid black;
 }
 .header.photo {
 	margin-left: 190px;
