--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,10 +1,10 @@
 body {
-  background: #0081C4;
+  background: #E26D5A;
   overflow-y: scroll;
   overflow-x: hidden;
-  font-family: "Trebuchet MS", Futura, sans-serif;
+  font-family: Tahoma, Geneva, sans-serif;
   font-weight: 600;
-  font-size: 3em;
+  font-size: 2.7em;
 }
 
 div{
