--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -33,7 +33,6 @@
 }
 
 .icon-group {
-  background: #141A30;
   text-align: center;
 }
 
@@ -48,13 +47,8 @@
 }
 
 #footer {
-  background:#141A30;
-  bottom: 0px;
-  bottom:0;
-  height:60px;      /* Height of the footer */
-  left: 0px;
-  padding: 1rem;
-  position:absolute;
-  right: 0px;
-  width:100%;
+  margin-top: 30px;
+  position: relative;
+  padding: 0.5rem;
+  height: inherit;
 }
