--- a/stylesheets/resume.css
+++ b/stylesheets/resume.css
@@ -38,9 +38,6 @@ ul {
 	padding: 0 0 0 10px;
 	list-style-type: square;
 }
-a {
-	color: #222;
-}
 /* ________________________________________________________ */
 
 .clear {
@@ -60,7 +57,6 @@ a {
 #title {
 	line-height: 42px;
 	border-bottom: 3px solid #000;
-	padding-bottom: 30px;
 	margin: 0px 0 30px 0;
 }
 
@@ -85,13 +81,10 @@ p label {
 	}
 
 
-.section {
-	margin-bottom: 20px;
-}
-
 .item {
 	margin: 0 0 20px 0;
 }
+
 
 /*  _____________________________ */
 .rtl {
@@ -101,6 +94,7 @@ p label {
 .photo .basic-info .set {
 	float: none !important;
 	width: auto !important;
+	margin-bottom: 20px;
 }
 .basic-info .address {
 	width: 40%;
@@ -143,20 +137,23 @@ p label {
 .section span.value {
 	display: block;
 }
-.section h3 span.l, .section span.r {
-	width: 49%;
-	float: left;
+.section span.r {
+	float: right;
+	text-align: right;
 }
-	.section span.r {
-		float: right;
-		text-align: right;
-	}
-	.section-education .school,
-	.section-work .job_title {
-		font-size: 100%;
-		display: block;
-		margin: 5px 0 5px 0;
-	}
+.section-work .job_title {
+	font-size: 100%;
+	display: block;
+	text-decoration: underline;
+	margin: 5px 0 5px 0;
+}
+
+.section-education .school{
+	font-size: 100%;
+	text-decoration: underline;
+	display: block;
+	margin: 5px 0 5px 0;
+}
 
 /* ___ photo ___ */
 #photo {
